# you-pee-free

./: .gitignore  Makefile  README.md  Stent.lean  comsol_output_framework.md  gpr_sampling_meeting.pptx  lake-manifest.json  pyproject.toml  stent_optimization_methods.docx  stent_optimization_proposal_012226.docx  ureteralperistalsis_extracted.txt
Stent/: Examples.lean  Feature.lean  FluxBookkeeping.lean  Metrics.lean  Objectives.lean
admin/: presentation_script.md  stent_comsol_tracker.xlsx  stent_optimization_proposal_012226.docx  stent_pipeline_minimal.pptx  stent_pipeline_v3.pptx  stent_pipeline_v4.pptx  stent_pipeline_walkthrough.pptx  update_video_script_aristotle_extension.md  update_video_script_objective_functions.md
config/: base_flow_v1.contract.example.json  comsol_dumbbell_reference.yaml  parameters.yaml
docs/: 2339_full.txt  2339_paper_full_breakdown.md  comsol_automation_lessons_learned.md  comsol_batch_runbook.md  comsol_first_runs_baby_steps.md  comsol_flux_extraction.md  comsol_hole_selection_setup.md  comsol_java_method_checklist.md  comsol_normalized_frame_reference.md  comsol_shaft_hole_flux_automation.md  comsol_smoke_run_checklist.md  comsol_warmstart_batch_workflow.md  experiment_log.md  hole_metadata_sidecar_spec.md  metrics_catalog.md  parameter_schema.md  peristalsis_simulation_analysis.md  pipeline_overview.md  runtime_optimization_plan.md
formalization/: README.md
matlab_pipeline/: README.md  example_config.json  load_pipeline_config.m  run_one_shot_campaign.m  run_one_shot_design.m
scripts/: build_shaft_hole_flux_targets.py  (+16 more)
(+117 files in other folders)
